@@ -1,3 +1,10 @@
+2002-05-29  Han-Wen  <hanwen@cs.uu.nl>
+
+	* ly/engraver-init.ly (TabStaffContext): 
+	enable TabStaff by default.
+
+	*  Tablature support by Jean-Baptiste Lamy <jiba@@tuxfamily.org>
+
 2002-05-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* config.hh.in: Remove duplicate DIR_DATADIR entry.
